--- a/mail/templates/mail/inbox.html
+++ b/mail/templates/mail/inbox.html
@@ -11,9 +11,12 @@
 <a class="btn btn-sm btn-outline-primary" href="{% url 'logout' %}">Log Out</a>
 <hr>
 
+<h3 id="err" class="text-danger"></h3>
 <div id="emails-view">
 </div>
-<h3 class="text-danger" id="error"></h3>
+
+<div id="full-view">
+</div>
 <div id="compose-view">
     <h3>New Email</h3>
     <form id="compose-form">
@@ -21,12 +24,17 @@
             From: <input disabled class="form-control" value="{{ request.user.email }}">
         </div>
         <div class="form-group">
-            To: <input id="compose-recipients" class="form-control">
+            <label>To:</label>
+            <input required type="email" id="compose-recipients" class="form-control">
         </div>
         <div class="form-group">
-            <input class="form-control" id="compose-subject" placeholder="Subject">
+            <label>Subject:</label>
+            <input required type="text" class="form-control" id="compose-subject">
         </div>
-        <textarea class="form-control" id="compose-body" placeholder="Body"></textarea>
+        <div class="form-group">
+            <label>Body:</label>
+            <textarea required class="form-control" id="compose-body"></textarea>
+        </div>
         <input type="submit" class="btn btn-primary" />
     </form>
 </div>
